Play around with compile-time evaluation.
Assembly looks nice but then again at this stage. However, at this stage
the compiler is able to inline all of the "normal" version as well.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ set(CMAKE_CXX_FLAGS "-O3 -Wall -Werror -pedantic")
 include_directories(.)
 
 add_executable(test_func tests/test_func.cc)
+add_executable(test_compiletime tests/test_compiletime.cc)
